--- a/plugin_info.toml
+++ b/plugin_info.toml
@@ -11,7 +11,7 @@ license = 'MIT'
 
 [plugin-install]
 #packages required for your plugin:
-packages-required = ['pyserial', 'pyvisa']
+packages-required = ['pyserial', 'pyvisa', 'pymodaq>=4.0.8']
 ##
 
 [features]  # defines the plugin features contained into this plugin
